dust off Lecture 4.3

--- a/main.bib
+++ b/main.bib
@@ -337,6 +337,24 @@ MRREVIEWER = {Donald M. Davis},
        URL = {http://dx.doi.org/10.1093/qjmath/51.4.437},
 }
 
+@article {Chan,
+    AUTHOR = {Chan, Ken},
+     TITLE = {A simple proof that the unstable (co)-homology of the
+              {B}rown-{P}eterson spectrum is torsion free},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {26},
+      YEAR = {1982},
+    NUMBER = {2},
+     PAGES = {155--157},
+      ISSN = {0022-4049},
+   MRCLASS = {55N20 (55T99)},
+  MRNUMBER = {675011},
+MRREVIEWER = {Edgar H. Brown, Jr.},
+       DOI = {10.1016/0022-4049(82)90020-2},
+       URL = {http://dx.doi.org/10.1016/0022-4049(82)90020-2},
+}
+
 @article {DavisLawson,
     AUTHOR = {Davis, Daniel G. and Lawson, Tyler},
      TITLE = {Commutative ring objects in pro-categories and generalized
@@ -846,6 +864,24 @@ MRREVIEWER = {J. F. Adams},
    MRCLASS = {55G25},
   MRNUMBER = {0385859},
 MRREVIEWER = {A. Liulevicius},
+}
+
+@article {LawsonNaumann,
+    AUTHOR = {Lawson, Tyler and Naumann, Niko},
+     TITLE = {Commutativity conditions for truncated {B}rown-{P}eterson
+              spectra of height 2},
+   JOURNAL = {J. Topol.},
+  FJOURNAL = {Journal of Topology},
+    VOLUME = {5},
+      YEAR = {2012},
+    NUMBER = {1},
+     PAGES = {137--168},
+      ISSN = {1753-8416},
+   MRCLASS = {55P42 (55N22 55N34 55P43)},
+  MRNUMBER = {2897051},
+MRREVIEWER = {Rui Miguel Saramago},
+       DOI = {10.1112/jtopol/jtr030},
+       URL = {http://dx.doi.org/10.1112/jtopol/jtr030},
 }
 
 @article {Lazard,
@@ -1672,6 +1708,40 @@ MRREVIEWER = {Stewart B. Priddy},
    MRCLASS = {55N22 (55P20 55P42 55Q45 55S25)},
   MRNUMBER = {655040 (83j:55005)},
 MRREVIEWER = {Franklin P. Peterson},
+}
+
+@article {WilsonThesisI,
+    AUTHOR = {Wilson, W. Stephen},
+     TITLE = {The {$\Omega $}-spectrum for {B}rown-{P}eterson cohomology.
+              {I}},
+   JOURNAL = {Comment. Math. Helv.},
+  FJOURNAL = {Commentarii Mathematici Helvetici},
+    VOLUME = {48},
+      YEAR = {1973},
+     PAGES = {45--55; corrigendum, ibid. 48 (1973), 194},
+      ISSN = {0010-2571},
+   MRCLASS = {55B20},
+  MRNUMBER = {0326712},
+MRREVIEWER = {J. W. Vick},
+       DOI = {10.1007/BF02566110},
+       URL = {http://dx.doi.org/10.1007/BF02566110},
+}
+
+@article {WilsonThesisII,
+    AUTHOR = {Wilson, W. Stephen},
+     TITLE = {The {$\Omega $}-spectrum for {B}rown-{P}eterson cohomology.
+              {II}},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {97},
+      YEAR = {1975},
+     PAGES = {101--123},
+      ISSN = {0002-9327},
+   MRCLASS = {55B20},
+  MRNUMBER = {0383390},
+MRREVIEWER = {J. W. Vick},
+       DOI = {10.2307/2373662},
+       URL = {http://dx.doi.org/10.2307/2373662},
 }
 
 @article {WittenEllipticGeneraQFT,
