reminder about sheaves of spectra

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -710,6 +710,8 @@ The Stolz--Teichner program
 
 -----
 
+Constructing sheaves of spectra on $\moduli{fg}$: the no-go results for $E_\infty$ and $A_\infty$ rings on the flat site.  There's a little MO discussion about it here: \texttt{http://chat.stackexchange.com/transcript/message/35361282#35361282}.
+
 Contexts for structured ring spectra
 
 Difficulty in computing $\S_d \actson E_d^*$. (Gross--Hopkins and the period map.)
