--- a/finite.tex
+++ b/finite.tex
@@ -658,7 +658,7 @@ to produce the coordinate change from \Cref{EveryFGLIsPTypical}: \[1 - \exp \lef
 
 
 
-\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} III: Small scales}
+\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} III: Small scales}\label{SectionMfgSmallScales}
 
 In the previous two Lectures, we analyzed the structure of $\moduli{fg}$ as a whole: first we studied the cover \[\moduli{fgl} \to \moduli{fg},\] and then we turned to the stratification described by the height function \[\height\co \pi_0 \moduli{fg}(\text{$T$ a $\Z_{(p)}$--algebra}) \to \N \cup \{\infty\}.\]  In this Lecture, we will concern ourselves with the small scale behaviors of $\moduli{fg}$: its geometric points and their local neighborhoods.  To begin, we have all the tools in place to perform an outright classification of the geometric points.
 
@@ -689,7 +689,7 @@ for any infinitesimal thickening $\Spf R$ of $\Spec k$.  Thinking of $X$ as repr
 
 For a formal group $\Gamma\co \Spec k \to \moduli{fg}$, the definition is formally similar, but actually writing it out is made complicated by \Cref{WarningAboutStacks}.  In particular, $p\co \Spec k \to X$ may not lift directly through $\Spf R \to X$, but instead $\Spec R/\m \to X$ may present $p$ on a cover $i\co \Spec R/\m \to \Spec k$.
 
-\begin{definition}[{\cite[Section 2.4]{RezkFelixKlein}, cf.\ \cite[Section 6]{StricklandFiniteSubgps}}]
+\begin{definition}[{\cite[Section 2.4]{RezkFelixKlein}, cf.\ \cite[Section 6]{StricklandFiniteSubgps}}]\label{LubinTateDefn}
 Define $(\moduli{fg})^\wedge_\Gamma$, the \textit{Lubin--Tate stack}, to be the groupoid-valued functor which on an infinitesimal thickening $R$ of $k$ has objects
 \begin{center}
 \begin{tikzcd}[row sep=4em, column sep=3em]
@@ -735,7 +735,7 @@ The main result about this infinitesimal space $(\moduli{fg})^\wedge_\Gamma$ is 
 Suppose that $\height \Gamma < \infty$ for $\Gamma$ a formal group over $k$ a perfect field of positive characteristic $p$.  The functor $(\moduli{fg})^\wedge_\Gamma$ is valued in essentially discrete groupoids, and it is naturally equivalent to a smooth formal scheme over $\W_p(k)$ of dimension $(\height(\Gamma) - 1)$.
 \end{theorem}
 
-\begin{remark}
+\begin{remark}[{\cite[Theorem 4.35]{Zink}}]
 The presence of the \textit{$p$--local Witt ring} $\W_p(k)$ is explained by its universal property: for $k$ as above and $R$ an infinitesimal thickening of $k$, $\W_p(k)$ has the lifting property\footnote{Rings with such lifting properties are generally called \textit{Cohen rings.}  In the case that $k$ is a perfect field of positive characteristic $p$, the Witt ring $\W_p(k)$ happens to model a Cohen ring for $k$.}
 \begin{center}
 \begin{tikzcd}
@@ -1249,7 +1249,7 @@ The utility of this Theorem is in the identification of the stack $\context{E_d}
 For $\Gamma_d$ the Honda formal group law of height $d$ over a perfect field $k$ of positive characteristic $p$, we compute \[\Aut \Gamma_d \cong \left( \W_p(k) \<S\> \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] where $\phi$ denotes a lift of the Frobenius from $k$ to $\W_p(k)$. \qed
 \end{theorem}
 
-\begin{remark}
+\begin{remark}\label{StablizerRepIsComplicated}
 As a matter of emphasis, this Theorem does not give any description of the \emph{representation} of $\Aut \Gamma_d$, which is very complicated (cf.\ \Cref{ThePeriodMapSection}).  Nonetheless, the arithmetically-minded reader might recognize this description of $\Aut \Gamma_d$ as the group of units of a maximal order $\mathbf o_D$ in the division algebra $D$ of Brauer--Hasse invariant $1/d$ over $k$ --- another glimpse of arithmetic geometry poking through to affect stable homotopy theory.\footnote{This finally explains our preference for using the letter ``$d$'' to represent the height of a formal group --- the ``$d$'' (or, rather the ``$D$'') stands for ``division algebra''.}
 \end{remark}
 
