mention tyler’s displays paper

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -860,7 +860,7 @@ This map has incredibly good properties.  It is equivariant for the action of $\
 \end{remark}
 
 \begin{remark}
-It is also possible to build versions of Dieudonn\'e theory over still more exotic rings.  The most successful such version is Zink's theory of Dieudonn\'e displays~\cite{ZinkDisplays}.
+It is also possible to build versions of Dieudonn\'e theory over still more exotic rings.  The most successful such version is Zink's theory of Dieudonn\'e displays~\cite{ZinkDisplays}, which has found some application in algebraic topology~\cite{LawsonDisplays}.
 \end{remark}
 
 
