--- a/main.bib
+++ b/main.bib
@@ -894,6 +894,23 @@ MRREVIEWER = {J. F. Adams},
 MRREVIEWER = {A. Liulevicius},
 }
 
+@article {LawsonDisplays,
+    AUTHOR = {Lawson, Tyler},
+     TITLE = {Structured ring spectra and displays},
+   JOURNAL = {Geom. Topol.},
+  FJOURNAL = {Geometry \& Topology},
+    VOLUME = {14},
+      YEAR = {2010},
+    NUMBER = {2},
+     PAGES = {1111--1127},
+      ISSN = {1465-3060},
+   MRCLASS = {55P43 (14L05 55N22 55P42)},
+  MRNUMBER = {2629902},
+MRREVIEWER = {Rui Miguel Saramago},
+       DOI = {10.2140/gt.2010.14.1111},
+       URL = {http://dx.doi.org/10.2140/gt.2010.14.1111},
+}
+
 @article {LawsonNaumann,
     AUTHOR = {Lawson, Tyler and Naumann, Niko},
      TITLE = {Commutativity conditions for truncated {B}rown-{P}eterson
