--- a/main.bib
+++ b/main.bib
@@ -268,7 +268,27 @@ MRREVIEWER = {Haynes R. Miller},
        URL = {http://dx.doi.org/10.1016/B978-044481779-2/50016-X},
 }
 
-@article {Bousfield,
+@article {BousfieldLambdaRings,
+    AUTHOR = {Bousfield, A. K.},
+     TITLE = {On {$\lambda$}-rings and the {$K$}-theory of infinite loop
+              spaces},
+   JOURNAL = {$K$-Theory},
+  FJOURNAL = {$K$-Theory. An Interdisciplinary Journal for the Development,
+              Application, and Influence of $K$-Theory in the Mathematical
+              Sciences},
+    VOLUME = {10},
+      YEAR = {1996},
+    NUMBER = {1},
+     PAGES = {1--30},
+      ISSN = {0920-3036},
+   MRCLASS = {55N15 (19L20 55P47 55S25)},
+  MRNUMBER = {1373816},
+MRREVIEWER = {Robert D. Thompson},
+       DOI = {10.1007/BF00534886},
+       URL = {http://dx.doi.org/10.1007/BF00534886},
+}
+
+@article {BousfieldLocalization,
     AUTHOR = {Bousfield, A. K.},
      TITLE = {The localization of spectra with respect to homology},
    JOURNAL = {Topology},
