--- a/mo.tex
+++ b/mo.tex
@@ -629,6 +629,7 @@ These combine to give a resolution of $H\F_2$ via an iterated cofiber of free $k
 \end{tikzcd}
 \end{center}
 This Hopf algebra is commonly denoted $\mathcal A(1)_*$, and its corresponding subgroup scheme $\Spec \pi_* H\F_2 \sm_{kO} H\F_2 \subseteq \InternalAut_1 \G_a$ admits easy memorization: it is the subscheme of automorphisms of the form $x + \xi_1 x^2 + \xi_2 x^4$, with exactly the additional relations imposed on $\xi_1$ and $\xi_2$ so that this set is stable under composition and inversion.\footnote{A similar analysis shows that $H\F_2{}_* H\Z$ corepresents the subscheme of automorphisms of the form $x + \xi_1 x^2$ which are stable under composition and inversion.}\footnote{There is also an accidental isomorphism of this Hopf algebra with $\F_2^{D_4}$, where $D_4$ is the dihedral group with $8$ elements.}  Its cohomology is periodic with period $8$, and it is pictured through a range in \Cref{kOASSFigure}.
+\todo{This doesn't connect back with the first Adams SS.}
 \end{example}
 
 \begin{example}
