spectral base change remark

--- a/finite.tex
+++ b/finite.tex
@@ -269,6 +269,7 @@ If $E$ is a complex-oriented ring spectrum, then the simplicial sheaf $\context{
 \todo{Say what open, closed, flat maps of simplicial schemes are?}
 \todo{Jon thinks that this picture can be instructively recast in terms of the cotangent complex.  I'm not sure how, but it's something to keep in mind for later.}
 \todo{Hovey and Strickland have published a whole bunch of papers about establishing a reasonable (un/bounded) derived category for sheaves on various stacks important to topology, which go by names like $\operatorname{Stable}(BP_* BP)$.  It's probably worth putting in a remark about this here, admitting that the homotopical version of the stuff here isn't totally worked out, but this is the major foothold on it.}
+\todo{Somewhere in here you should talk about how $DX_+$ is an $E_\infty$ ring pro-spectrum, the spectral cohomology ring $F(X_+, E)$ is the base-change of $DX_+$ from $\S$ to $E$, that the weak topology is a natural thing to consider, and that the subscript notation is motivated by this change-of-base observation.}
 
 
 
